# newport-controller-library

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/newport/xps/: xps_controller.h  xps_error.h  xps_export.h  xps_group.h  xps_positioner.h  xps_types.h
src/: xps_controller.cc  xps_group.cc  xps_positioner.cc
src/internal/: tcp_socket.cc  tcp_socket.h
tests/: CMakeLists.txt  mock_xps_server.cc  mock_xps_server.h  test_controller.cc  test_group_motion.cc  test_tcp_socket.cc
